feat(01-04): implement PDF/DOCX parsing with semantic chunking
- Add document_processor.py with extract_text_from_pdf (pymupdf4llm)
- Add extract_text_from_docx (python-docx) with paragraph and table support
- Add chunk_text with RecursiveCharacterTextSplitter for semantic boundaries
- Add async process_document_pipeline for background document processing
- Add langchain-text-splitters to requirements.txt

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,6 +12,7 @@ qdrant-client>=1.16.2
 # LLM orchestration
 langchain>=1.0
 langchain-openai>=1.1.7
+langchain-text-splitters
 openai
 
 # Document processing
