--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "pwdlib[argon2]",
     "python-dotenv",
     "openai",
+    "redis>=5.0.0",
 ]
 
 [project.optional-dependencies]
