feat(02-06): create scheduled cleanup job for expired anonymous data
- Add apscheduler>=3.10.0 to dependencies
- Add ANONYMOUS_DATA_TTL_DAYS and CLEANUP_SCHEDULE_HOUR settings
- Create jobs/cleanup.py with cleanup_expired_anonymous_data()
- Delete expired Neo4j documents/chunks with STARTS WITH prefix match
- Delete expired Qdrant vectors filtered by anonymous user_id
- Setup scheduler runs daily at configured hour (default 3 AM)
- Integrate scheduler into main.py lifespan events

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "python-dotenv",
     "openai",
     "redis>=5.0.0",
+    "apscheduler>=3.10.0",
 ]
 
 [project.optional-dependencies]
