feat(03-03): add sse-starlette and streaming generation
- Add sse-starlette>=2.0.0 to requirements.txt
- Add stream_answer async generator function to generation_service.py
- Uses ChatOpenAI.astream() for token-by-token streaming
- Same prompt template as non-streaming generate_answer

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,6 +26,9 @@ pwdlib[argon2]
 # Utilities
 python-dotenv
 
+# SSE streaming
+sse-starlette>=2.0.0
+
 # Development dependencies
 pytest
 pytest-asyncio
