--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,12 @@ langchain-openai>=1.1.7
 langchain-text-splitters
 openai
 
+# LangGraph workflows
+langgraph>=1.0
+langgraph-checkpoint-postgres>=3.0.4
+psycopg[binary]>=3.0
+neo4j-graphrag-python
+
 # Document processing
 pymupdf4llm
 python-docx
