feat: add environment configuration and docker-compose setup for backend services

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,13 +8,25 @@
 SECRET_KEY=your-secret-key-here-generate-with-openssl-rand-hex-32
 
 # =============================================================================
-# NEO4J (REQUIRED)
+# REDIS
 # =============================================================================
-# Local Docker: bolt://localhost:7687
-# Neo4j Aura: neo4j+s://xxxxx.databases.neo4j.io
-NEO4J_URI=bolt://localhost:7687
+# Used for token blocklist and caching
+REDIS_URL=redis://localhost:6379/0
+
+# =============================================================================
+# POSTGRESQL (for LangGraph checkpointing)
+# =============================================================================
+# Docker default: postgresql://postgres:postgres@localhost:5432/ragapp
+POSTGRES_URI=postgresql://postgres:password@localhost:5432/ragapp
+
+# =============================================================================
+# NEO4J AURA (REQUIRED)
+# =============================================================================
+# Get from: https://console.neo4j.io
+# URI format: neo4j+s://xxxxx.databases.neo4j.io
+NEO4J_URI=neo4j+s://xxxxx.databases.neo4j.io
 NEO4J_USERNAME=neo4j
-NEO4J_PASSWORD=your-neo4j-password
+NEO4J_PASSWORD=your-aura-password
 NEO4J_DATABASE=neo4j
 
 # =============================================================================
