Refactor code structure for improved readability and maintainability; no functional changes made.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -41,7 +41,17 @@ QDRANT_API_KEY=
 QDRANT_COLLECTION=documents
 
 # =============================================================================
-# OPENAI (REQUIRED)
+# LLM PROVIDER SELECTION
+# =============================================================================
+# Choose your LLM provider: "openai", "ollama", or "anthropic"
+# For OpenAI-compatible APIs (Groq, DeepSeek, Azure), use "openai" + OPENAI_BASE_URL
+LLM_PROVIDER=openai
+# Choose your embedding provider: "openai" or "ollama"
+# (Anthropic does not offer embeddings — use openai or ollama)
+EMBEDDING_PROVIDER=openai
+
+# =============================================================================
+# OPENAI (required when LLM_PROVIDER=openai or EMBEDDING_PROVIDER=openai)
 # =============================================================================
 # Get from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your-openai-api-key
@@ -50,6 +60,26 @@ OPENAI_EMBEDDING_MODEL=text-embedding-3-small
 # CRITICAL: Must match embedding model output dimensions
 # text-embedding-3-small = 1536, text-embedding-3-large = 3072
 OPENAI_EMBEDDING_DIMENSIONS=1536
+# Optional: custom base URL (for Azure OpenAI, proxies, etc.)
+# OPENAI_BASE_URL=
+
+# =============================================================================
+# ANTHROPIC (required when LLM_PROVIDER=anthropic)
+# =============================================================================
+# Get from: https://console.anthropic.com/settings/keys
+ANTHROPIC_API_KEY=your-anthropic-api-key
+ANTHROPIC_MODEL=claude-sonnet-4-5-20250929
+
+# =============================================================================
+# OLLAMA (required when LLM_PROVIDER=ollama or EMBEDDING_PROVIDER=ollama)
+# =============================================================================
+# Install Ollama: https://ollama.ai
+# Then pull models: ollama pull llama3.2 && ollama pull nomic-embed-text
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.2
+OLLAMA_EMBEDDING_MODEL=nomic-embed-text
+# nomic-embed-text = 768, mxbai-embed-large = 1024
+OLLAMA_EMBEDDING_DIMENSIONS=768
 
 # =============================================================================
 # DOCUMENT PROCESSING
