--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 SECRET_KEY=your-secret-key-here-generate-with-openssl-rand-hex-32
 REDIS_URL=redis://localhost:6379/0
-POSTGRES_URI=postgresql://postgres:password@localhost:5432/ragapp
+POSTGRES_URI=postgresql://apple@localhost:5432/ragapp
+# as we created from apple then user will be apple mostly
 NEO4J_URI=neo4j+s://7bf3243b.databases.neo4j.io
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=9hrxLBvsRVCrtfJg-4SQWvWTTwrZKiqgI3-g4PGb9Kk
@@ -9,10 +10,28 @@ QDRANT_HOST=localhost
 QDRANT_PORT=6333
 QDRANT_API_KEY=
 QDRANT_COLLECTION=documents
-OPENAI_API_KEY=your-openai-api-key
-OPENAI_MODEL=gpt-4o
-OPENAI_EMBEDDING_MODEL=text-embedding-3-small
-OPENAI_EMBEDDING_DIMENSIONS=1536
+
+# --- Active Provider: Ollama (local) ---
+LLM_PROVIDER=ollama
+EMBEDDING_PROVIDER=ollama
+OLLAMA_BASE_URL=http://localhost:11434
+OLLAMA_MODEL=llama3.2
+OLLAMA_EMBEDDING_MODEL=nomic-embed-text
+OLLAMA_EMBEDDING_DIMENSIONS=768
+
+# --- Uncomment for OpenAI ---
+# LLM_PROVIDER=openai
+# EMBEDDING_PROVIDER=openai
+# OPENAI_API_KEY=your-openai-api-key
+# OPENAI_MODEL=gpt-4o
+# OPENAI_EMBEDDING_MODEL=text-embedding-3-small
+# OPENAI_EMBEDDING_DIMENSIONS=1536
+
+# --- Uncomment for Anthropic (Claude) ---
+# LLM_PROVIDER=anthropic
+# EMBEDDING_PROVIDER=ollama
+# ANTHROPIC_API_KEY=your-anthropic-api-key
+# ANTHROPIC_MODEL=claude-sonnet-4-5-20250929
 CHUNK_SIZE=1000
 CHUNK_OVERLAP=200
 MAX_UPLOAD_SIZE_MB=50
