feat: implement asynchronous entity extraction with concurrency support
- Enhanced `extract_entities_batch` to process multiple chunks concurrently using asyncio.
- Added progress tracking for entity extraction tasks.
- Introduced a new Celery task for document processing, allowing for background processing and status tracking.
- Updated task tracking to use Redis for persistence across server restarts and page refreshes.
- Modified frontend to restore in-progress tasks from Redis on page load and improved document upload feedback.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -37,8 +37,9 @@ dependencies = [
     # Authentication
     "pyjwt",
     "pwdlib[argon2]",
-    # Redis & scheduling
+    # Redis, Celery & scheduling
     "redis",
+    "celery[redis]",
     "apscheduler",
     # Form data & utilities
     "python-multipart",
