Refactor code structure for improved readability and maintainability

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -46,6 +46,8 @@ dependencies = [
     "python-dotenv",
     # SSE streaming
     "sse-starlette",
+    "langchain-neo4j>=0.8.0",
+    "langchain-experimental>=0.4.1",
 ]
 
 [project.optional-dependencies]
