changes for models and open router

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
     "sse-starlette",
     "langchain-neo4j>=0.8.0",
     "langchain-experimental>=0.4.1",
+    "rank-bm25>=0.2.2",
 ]
 
 [project.optional-dependencies]
