--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,7 +46,19 @@ services:
       timeout: 5s
       retries: 5
 
+  ollama:
+    image: ollama/ollama
+    container_name: ollama
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama:/root/.ollama
+    environment:
+      OLLAMA_HOST: "0.0.0.0:11434"
+      OLLAMA_NUM_PARALLEL: 3
+
 volumes:
   postgres_data:
   redis_data:
   qdrant_data:
+  ollama:
